unpackaged/main/default/objects/pse__Project_Task__c/fields/pse__Actual_End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>pse__Actual_End_Date_Time__c</fullName>
    <inlineHelpText>Date &amp; time of when the task actually ended. When the completed check box was checked</inlineHelpText>
    <label>Actual End Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>