unpackaged/main/default/objects/pse__Project_Task__c/fields/pse__Actual_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>pse__Actual_Start_Date__c</fullName>
    <formula>DATEVALUE( pse__Actual_Start_Date_Time__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Date of when the task actually started. When the started check box was checked</inlineHelpText>
    <label>Actual Start Date</label>
    <type>Date</type>
</CustomField>