unpackaged/main/default/objects/pse__Project_Task__c/fields/pse__Assigned_Resources_Long__c.field-meta.xml
<CustomField>
    <fullName>pse__Assigned_Resources_Long__c</fullName>
    <label>Assigned Resources (Long)</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>