unpackaged/main/default/objects/pse__Project_Task__c/fields/pse__Blocked__c.field-meta.xml
<CustomField>
    <fullName>pse__Blocked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Blocked</label>
    <type>Checkbox</type>
</CustomField>