unpackaged/main/default/objects/pse__Project_Task__c/fields/pse__Do_Not_Auto_Update_Parents__c.field-meta.xml
<CustomField>
    <fullName>pse__Do_Not_Auto_Update_Parents__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Auto Update Parents</label>
    <type>Checkbox</type>
</CustomField>