unpackaged/main/default/objects/pse__Project_Task__c/fields/pse__Duration_Unit__c.field-meta.xml
<CustomField>
    <fullName>pse__Duration_Unit__c</fullName>
    <defaultValue>"days"</defaultValue>
    <description>Specifies the units of time used for project tasks. Valid values are hours or days. The default value is days.</description>
    <label>Duration Units</label>
    <length>10</length>
    <type>Text</type>
</CustomField>