unpackaged/main/default/objects/pse__Project_Task__c/fields/pse__Estimated_Hours__c.field-meta.xml
<CustomField>
    <fullName>pse__Estimated_Hours__c</fullName>
    <label>Estimated Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>