unpackaged/main/default/objects/pse__Project_Task__c/fields/pse__Flag_Information__c.field-meta.xml
<CustomField>
    <fullName>pse__Flag_Information__c</fullName>
    <label>Flag - Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>