unpackaged/main/default/objects/pse__Project_Task__c/fields/pse__Jira_Correlation_ID__c.field-meta.xml
<CustomField>
    <fullName>pse__Jira_Correlation_ID__c</fullName>
    <description>Unique ID of the related issue in Jira. Used for synchronization.</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique ID of the related issue in Jira. Used for synchronization.</inlineHelpText>
    <label>Jira Correlation ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>