unpackaged/main/default/objects/pse__Project_Task__c/fields/pse__Jira_Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>pse__Jira_Issue_Type__c</fullName>
    <description>Type of issue the project task is created as in Jira. You can add custom issue types to the picklist. The values are case-sensitive and must exist in your Jira application. After adding a new issue type, you must update the dependency with the Jira Issue Type Category field.</description>
    <inlineHelpText>Type of issue the project task is created as in Jira.</inlineHelpText>
    <label>Jira Issue Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>pse__Jira_Issue_Type_Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Bug</fullName>
            </value>
            <value>
                <fullName>Epic</fullName>
            </value>
            <value>
                <fullName>Story</fullName>
            </value>
            <value>
                <fullName>Sub-task</fullName>
            </value>
            <value>
                <fullName>Task</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>