unpackaged/main/default/objects/pse__Project_Task__c/fields/pse__Jira_Issue_Type_Category__c.field-meta.xml
<CustomField>
    <fullName>pse__Jira_Issue_Type_Category__c</fullName>
    <description>Indicates whether the issue type the project task will be created as in Jira is a standard issue or a sub-task issue type.</description>
    <inlineHelpText>Indicates whether the issue type the project task will be created as in Jira is a standard issue or a sub-task issue type. After selecting a value, you must select a Jira Issue Type.</inlineHelpText>
    <label>Jira Issue Type Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard Issue Type</fullName>
            </value>
            <value>
                <fullName>Sub-Task Issue Type</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>