unpackaged/main/default/objects/pse__Project_Task__c/fields/pse__Long_Description__c.field-meta.xml
<CustomField>
    <fullName>pse__Long_Description__c</fullName>
    <label>Long Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>