unpackaged/main/default/objects/pse__Project_Task__c/fields/pse__Order__c.field-meta.xml
<CustomField>
    <fullName>pse__Order__c</fullName>
    <label>Peer Order</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>