unpackaged/main/default/objects/pse__Project_Task__c/fields/pse__Parent_Task_End_Date__c.field-meta.xml
<CustomField>
    <fullName>pse__Parent_Task_End_Date__c</fullName>
    <description>End date of the current Project Task's Parent Task</description>
    <formula>pse__Parent_Task__r.pse__End_Date_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Task End Date</label>
    <type>Date</type>
</CustomField>