unpackaged/main/default/objects/pse__Project_Task__c/fields/pse__Parent_Task_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>pse__Parent_Task_Start_Date__c</fullName>
    <description>Formula for the start date of the current Project Task's Parent Task</description>
    <formula>pse__Parent_Task__r.pse__Start_Date_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Task Start Date</label>
    <type>Date</type>
</CustomField>