unpackaged/main/default/objects/pse__Project_Task__c/fields/pse__Points__c.field-meta.xml
<CustomField>
    <fullName>pse__Points__c</fullName>
    <label>Points</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>