unpackaged/main/default/objects/pse__Project_Task__c/fields/pse__Points_Complete__c.field-meta.xml
<CustomField>
    <fullName>pse__Points_Complete__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Number of points completed</inlineHelpText>
    <label>Points Complete</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>