unpackaged/main/default/objects/pse__Project_Task__c/fields/pse__Points_Remaining__c.field-meta.xml
<CustomField>
    <fullName>pse__Points_Remaining__c</fullName>
    <formula>pse__Points__c - pse__Points_Complete__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Points Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>