unpackaged/main/default/objects/pse__Project_Task__c/fields/pse__Project__c.field-meta.xml
<CustomField>
    <fullName>pse__Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Project that the Task is a part of.</description>
    <inlineHelpText>You do not have to define the Project field when creating a child task. The Project field auto-populates from the parent task and overwrites any entered value.</inlineHelpText>
    <label>Project</label>
    <referenceTo>pse__Proj__c</referenceTo>
    <relationshipLabel>Project Tasks</relationshipLabel>
    <relationshipName>Project_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>