unpackaged/main/default/objects/pse__Project_Task__c/fields/pse__Projected_Hours__c.field-meta.xml
<CustomField>
    <fullName>pse__Projected_Hours__c</fullName>
    <formula>IF (ISBLANK(pse__Estimated_Time_To_Completion__c), pse__Estimated_Hours__c, pse__Actual_Hours__c  +  pse__Estimated_Time_To_Completion__c)</formula>
    <inlineHelpText>Formula field. The sum of Actual Hours and Estimated Time to Completion (Task). When Estimated Time to Completion (Task) is blank, Projected Hours is Estimated Hours.</inlineHelpText>
    <label>Projected Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>