unpackaged/main/default/objects/pse__Project_Task__c/fields/pse__Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>pse__Start_Date_Time__c</fullName>
    <description>The date &amp; time on which work for this Task is supposed to start.  Timecards may still be entered for a Task before this date as long as it is not closed for time entry.</description>
    <inlineHelpText>The date &amp; time on which work for this Task is supposed to start.  Timecards may still be entered for a Task before this date as long as it is not closed for time entry.</inlineHelpText>
    <label>Start Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>