unpackaged/main/default/objects/pse__Project_Task__c/fields/pse__Started__c.field-meta.xml
<CustomField>
    <fullName>pse__Started__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Will be checked if the task has been started</description>
    <inlineHelpText>Will be checked if the task has been started</inlineHelpText>
    <label>Started</label>
    <type>Checkbox</type>
</CustomField>