unpackaged/main/default/objects/pse__Project_Task__c/fields/pse__Summary__c.field-meta.xml
<CustomField>
    <fullName>pse__Summary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicated if this is a task that has children. If summary task values and time should be rolled up from sub tasks. Values should not be entered directly for this task</description>
    <label>Summary</label>
    <type>Checkbox</type>
</CustomField>