unpackaged/main/default/objects/pse__Project_Task__c/fields/pse__Synchronize_Milestone_And_Task__c.field-meta.xml
<CustomField>
    <fullName>pse__Synchronize_Milestone_And_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When selected, the related milestone target date and the task end date will be synchronized when modified in Gantt.</description>
    <inlineHelpText>When selected, the related milestone target date and the task end date will be synchronized when modified in Gantt.</inlineHelpText>
    <label>Synchronize Milestone and Task</label>
    <type>Checkbox</type>
</CustomField>