unpackaged/main/default/objects/pse__Project_Task__c/fields/pse__Task_ID_Chain__c.field-meta.xml
<CustomField>
    <fullName>pse__Task_ID_Chain__c</fullName>
    <description>System field showing the delimited list of Parent Task IDs 'up the chain' to the Top-level Parent Task.  Top-level Parent Tasks will have a Task ID Chain value equal to their own ID.  Their immediate child Tasks will have a Task ID Chain value equal to their own ID, then the ID of their Parent Task, and so on.</description>
    <inlineHelpText>System field showing the delimited list of Parent Task IDs 'up the chain' to the Top-level Parent Task.</inlineHelpText>
    <label>Task ID Chain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>