unpackaged/main/default/objects/pse__Project_Task__c/fields/pse__Task_Key__c.field-meta.xml
<CustomField>
    <fullName>pse__Task_Key__c</fullName>
    <description>Internal alternative id. Not intended for display</description>
    <externalId>true</externalId>
    <label>Task Key</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>