unpackaged/main/default/objects/pse__Project_Task__c/fields/pse__Task_Key_Chain__c.field-meta.xml
<CustomField>
    <fullName>pse__Task_Key_Chain__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Task Key Chain</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>