unpackaged/main/default/objects/pse__Project_Task__c/fields/pse__Task_Name_Chain_Long__c.field-meta.xml
<CustomField>
    <fullName>pse__Task_Name_Chain_Long__c</fullName>
    <description>This is a new field to hold task name chain. This field has same behavior as the "Task Name Chain" field. But the new data type (long text area) will allow name chain for larger number for project tasks in a hierarchy as compare to the old one (255 chars)</description>
    <inlineHelpText>This is a new field to hold task name chain. This field has same behavior as the "Task Name Chain" field. But the new data type (long text area) will allow name chain for larger number for project tasks in a hierarchy as compare to the old one (255 chars)</inlineHelpText>
    <label>Task Name Chain (Long)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>