unpackaged/main/default/objects/pse__Project_Task__c/fields/pse__Task_Number__c.field-meta.xml
<CustomField>
    <fullName>pse__Task_Number__c</fullName>
    <description>Internal number not intended for display</description>
    <displayFormat>{0}</displayFormat>
    <label>Task Number</label>
    <type>AutoNumber</type>
</CustomField>