unpackaged/main/default/objects/pse__Project_Task__c/fields/pse__Top_level_Parent_Task__c.field-meta.xml
<CustomField>
    <fullName>pse__Top_level_Parent_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>System field which shows the top-level Parent Task (parent task's parent's parent etc.) for the current Task.  Top-level Tasks have no Parent Task or Top-level Parent Task themselves.</description>
    <inlineHelpText>System field which shows the top-level Parent Task (parent task's parent's parent etc.) for the current Task.  Top-level Tasks have no Parent Task or Top-level Parent Task themselves.</inlineHelpText>
    <label>Top-level Parent Task</label>
    <referenceTo>pse__Project_Task__c</referenceTo>
    <relationshipLabel>Project Tasks (Top-level Parent Task)</relationshipLabel>
    <relationshipName>All_Sub_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>