unpackaged/main/default/objects/pse__Project_Task__c/fields/pse__WBS_Element_Number__c.field-meta.xml
<CustomField>
    <fullName>pse__WBS_Element_Number__c</fullName>
    <description>Work Breakdown Structure Element Number or ID.  May correspond to external Task Management system.</description>
    <inlineHelpText>Work Breakdown Structure Element Number or ID.  May correspond to external Task Management system.</inlineHelpText>
    <label>WBS Element Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>