unpackaged/main/default/objects/pse__Project_Task__c/fields/pse__Work_Calendar__c.field-meta.xml
<CustomField>
    <fullName>pse__Work_Calendar__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The work calendar used to schedule a project task.</description>
    <inlineHelpText>The work calendar used to schedule a project task.</inlineHelpText>
    <label>Work Calendar</label>
    <referenceTo>pse__Work_Calendar__c</referenceTo>
    <relationshipLabel>Project Tasks</relationshipLabel>
    <relationshipName>Project_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>