unpackaged/main/default/objects/pse__Project_Task__c/fields/pse__Work_Remaining__c.field-meta.xml
<CustomField>
    <fullName>pse__Work_Remaining__c</fullName>
    <inlineHelpText>Amount of time needed to complete this task</inlineHelpText>
    <label>Work Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>