unpackaged/main/default/objects/pse__Project_Task__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Implementation Consultant</fullName>
                <default>true</default>
                <label>Implementation Consultant</label>
            </value>
            <value>
                <fullName>Managing Consultant</fullName>
            </value>
            <value>
                <fullName>Off-Shore Consultant</fullName>
            </value>
            <value>
                <fullName>Off-Site Consultant</fullName>
            </value>
            <value>
                <fullName>PMO</fullName>
            </value>
            <value>
                <fullName>Project Manager</fullName>
            </value>
            <value>
                <fullName>tF Business Analyst</fullName>
            </value>
            <value>
                <fullName>Associate Consultant</fullName>
            </value>
            <value>
                <fullName>Business Analyst</fullName>
            </value>
            <value>
                <fullName>Compliance Expert</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Global Lead</fullName>
            </value>
            <value>
                <fullName>Managing/Principal Consultant</fullName>
            </value>
            <value>
                <fullName>Regional Lead</fullName>
            </value>
            <value>
                <fullName>Senior Consultant</fullName>
                <isActive>false</isActive>
                <label>Senior Consultant</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>