unpackaged/main/default/objects/pse__Project_Task__c/validationRules/pse__Actual_Start_Must_Be_Before_End.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Actual_Start_Must_Be_Before_End</fullName>
    <active>true</active>
    <description>Start date &amp; time must be before the end date &amp; time</description>
    <errorConditionFormula>pse__Actual_End_Date_Time__c &lt;  pse__Actual_Start_Date_Time__c</errorConditionFormula>
    <errorDisplayField>pse__Actual_End_Date_Time__c</errorDisplayField>
    <errorMessage>Actual Start Date &amp; Time must be before the Actual End Date &amp; Time</errorMessage>
</ValidationRule>