unpackaged/main/default/objects/pse__Project_Task__c/validationRules/pse__Can_not_complete_if_not_started.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Can_not_complete_if_not_started</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( pse__Started__c ), pse__Completed__c )</errorConditionFormula>
    <errorDisplayField>pse__Completed__c</errorDisplayField>
    <errorMessage>Can not mark as completed if not started</errorMessage>
</ValidationRule>